<resources>
    <string name="app_name">Chatroom</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_re_enter_password">Re-enter Password</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_city">City</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_male">Male</string>
    <string name="prompt_female">Female</string>
    <string name="prompt_profile_picture">Profile Picture</string>
    <string name="prompt_create_chatroom">Create Chatroom</string>
    <string name="prompt_chatroom_name">Chatroom Name</string>
    <string name="prompt_request_ride">Request Ride</string>
    <string name="prompt_on_drive">On Drive</string>
    <string name="prompt_request_driver">Request Driver</string>
    <string name="prompt_wait_for_accept">Wait For Accept</string>
    <string name="prompt_waiting_on_ride">Waiting On Ride</string>
    <string name="prompt_pickup_location">Pickup Location</string>
    <string name="prompt_dropoff_location">Dropoff Location</string>
    <string name="prmpt_full_name">Full Name</string>
    <string name="prompt_distance">Distance</string>
    <string name="prompt_eta">ETA</string>
    <string name="prompt_waiting_for_rider_acceptance">Waiting for rider to accept…</string>
    <string name="prompt_potential_rider">Potential Rider</string>
    <string name="action_create">Create</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_send_email">Send Email</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_share_remove_location">Share/Remove Location</string>
    <string name="action_draw_card">Draw Card</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="logo_description">Chat-app… Logo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Advance MAD</string>
    <string name="nav_header_subtitle">AdvMobileAppDev@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_game_lobby">Game Lobby</string>
    <string name="game_requests">Game Requests</string>
    <string name="action_settings">Settings</string>
    <string name="request_game">Request Game</string>
    <string name="view_users">View Users</string>
    <string name="profile">Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="view_chatroom">View Chatrooms</string>
    <string name="view_ride_history">View Ride History</string>
    <string name="logout">LOGOUT</string>
    <string name="hello_blank_fragment">Hello fragment</string>
    <string name="save">Save</string>
    <string name="send">Send message</string>
    <string name="num">#</string>
    <string name="type_message">Type message here…</string>
    <string name="active_user">Active Users</string>
    <string name="old_api_key">AIzaSyBuIvBN797lPyHRIASQJzk77k0ry-UZTCI</string>
    <string name="api_key">AIzaSyDutinEyrC4GMb5QyTSr0ROrcAlHDBL5sA</string>
    <string name="dealing">Dealing Cards</string>
    <string name="p1turn">Player 1\'s Turn</string>
    <string name="p2turn">Player 2\'s Turn</string>
    <string name="turn">%1$s\'s Turn</string>
    <string name="skip">Skip</string>
    <string name="talk_to_text">Talk to Text</string>
    <string name="translate_button">Translate</string>
    <string name="translate_message_dialog_title">Translate Message</string>
    <string name="translate_speech_dialog_title">Translate Speech</string>
    <string name="speak_now_prompt">Speak Now...</string>
    <string name="text_to_text_rb_text">Text to Text</string>
    <string name="text_to_talk_rb_text">Text to Talk</string>
    <string name="translate_message_from_label">From</string>
    <string name="translate_message_to_label">To</string>
    <string name="translate_message_submit_text">Submit</string>
    <string name="translate_message_cancel_text">Cancel</string>
    <string name="image_translation_title_text">Image Translation</string>
    <string name="speech_translation_title_text">Speech Translation</string>
    <string name="settings_title_text">Settings</string>
    <string name="auto_translate_switch_text">Auto-Translate</string>
    <string name="location_permission_switch_text">Location Permission</string>
    <string name="mic_permission_switch_text">Mic Permission</string>
    <string name="camera_permission_switch_text">Camera Permission</string>
    <string name="save_settings_button_text">Save Settings</string>
    <string name="choose_an_image_label_text">Choose An Image</string>
    <string name="translate_image_button_text">Translate Image</string>
    <string name="translated_text_label">Translated Text</string>
    <string name="original_text_label">Original Text</string>
    <string name="play_audio_button_text">Play Audio</string>
    <string name="language_for_auto_translation_label_text">Language for Auto-Translation</string>
    <string name="image_to_text_rb_text">Image to Text</string>
    <string name="image_to_talk_rb_text">Image to Talk</string>
    <string name="translate_image_dialog_title">Translate Image</string>
    <string name="speak_to_translate_text">Speak to Translate</string>
    <string-array name="bcp_47_codes">
        <item>ar-SA</item>
        <item>cs-CZ</item>
        <item>da-DK</item>
        <item>de-DE</item>
        <item>el-GR</item>
        <item>en-AU</item>
        <item>en-GB</item>
        <item>en-IE</item>
        <item>en-US</item>
        <item>en-ZA</item>
        <item>es-ES</item>
        <item>es-MX</item>
        <item>fi-FI</item>
        <item>fr-CA</item>
        <item>fr-FR</item>
        <item>he-IL</item>
        <item>hi-IN</item>
        <item>hu-HU</item>
        <item>id-ID</item>
        <item>it-IT</item>
        <item>ja-JP</item>
        <item>ko-KR</item>
        <item>nl-BE</item>
        <item>nl-NL</item>
        <item>no-NO</item>
        <item>pl-PL</item>
        <item>pt-BR</item>
        <item>pt-PT</item>
        <item>ro-RO</item>
        <item>ru-RU</item>
        <item>sk-SK</item>
        <item>sv-SE</item>
        <item>th-TH</item>
        <item>tr-TR</item>
        <item>zh-CN</item>
        <item>zh-HK</item>
        <item>zh-TW</item>
    </string-array>
    <string-array name="bcp_47_languages">
        <item>Arabic Saudi Arabia</item>
        <item>Czech Czech Republic</item>
        <item>Danish Denmark</item>
        <item>German Germany</item>
        <item>Modern Greek Greece</item>
        <item>English Australia</item>
        <item>English United Kingdom</item>
        <item>English Ireland</item>
        <item>English United States</item>
        <item>English South Africa</item>
        <item>Spanish Spain</item>
        <item>Spanish Mexico</item>
        <item>Finnish Finland</item>
        <item>French Canada</item>
        <item>French France</item>
        <item>Hebrew Israel</item>
        <item>Hindi India</item>
        <item>Hungarian Hungary</item>
        <item>Indonesian Indonesia</item>
        <item>Italian Italy</item>
        <item>Japanese Japan</item>
        <item>Korean Republic of Korea</item>
        <item>Dutch Belgium</item>
        <item>Dutch Netherlands</item>
        <item>Norwegian Norway</item>
        <item>Polish Poland</item>
        <item>Portuguese Brazil</item>
        <item>Portuguese Portugal</item>
        <item>Romanian Romania</item>
        <item>Russian Russian Federation</item>
        <item>Slovak Slovakia</item>
        <item>Swedish Sweden</item>
        <item>Thai Thailand</item>
        <item>Turkish Turkey</item>
        <item>Chinese China</item>
        <item>Chinese Hong Kong</item>
        <item>Chinese Taiwan</item>
    </string-array>
    <string-array name="text_to_speech_languages">
        <item>Arabic</item>
        <item>Bulgarian</item>
        <item>Catalan</item>
        <item>Chinese (Cantonese, Traditional)</item>
        <item>Chinese (Mandarin, Simplified)</item>
        <item>Croatian</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Dutch</item>
        <item>English</item>
        <item>French (France)</item>
        <item>French (Canada)</item>
        <item>German</item>
        <item>Greek</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Hungarian</item>
        <item>Indonesian</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Malay</item>
        <item>Norwegian</item>
        <item>Polish</item>
        <item>Portuguese (Brazil)</item>
        <item>Portuguese (Portugal)</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Spanish</item>
        <item>Swedish</item>
        <item>Tamil</item>
        <item>Telugu</item>
        <item>Thai</item>
        <item>Turkish</item>
        <item>Vietnamese</item>
    </string-array>
    <string-array name="text_to_speech_codes">
        <item>ar</item>
        <item>bg</item>
        <item>ca</item>
        <item>zh-Hant</item>
        <item>zh-Hans</item>
        <item>hr</item>
        <item>cs</item>
        <item>da</item>
        <item>nl</item>
        <item>en</item>
        <item>fr</item>
        <item>fr-ca</item>
        <item>de</item>
        <item>el</item>
        <item>he</item>
        <item>hi</item>
        <item>hu</item>
        <item>id</item>
        <item>it</item>
        <item>ja</item>
        <item>ko</item>
        <item>ms</item>
        <item>nb</item>
        <item>pl</item>
        <item>pt</item>
        <item>pt-pt</item>
        <item>ro</item>
        <item>ru</item>
        <item>sk</item>
        <item>sl</item>
        <item>es</item>
        <item>sv</item>
        <item>ta</item>
        <item>te</item>
        <item>th</item>
        <item>tr</item>
        <item>vi</item>
    </string-array>
    <string-array name="text_to_speech_codes_with_region">
        <item>ar-SA</item>
        <item>bg-BG</item>
        <item>ca-ES</item>
        <item>zh-HK</item>
        <item>zh-CN</item>
        <item>hr-HR</item>
        <item>cs-CZ</item>
        <item>da-DK</item>
        <item>nl-NL</item>
        <item>en-US</item>
        <item>fr-FR</item>
        <item>fr-CA</item>
        <item>de-DE</item>
        <item>el-GR</item>
        <item>he-IL</item>
        <item>hi-IN</item>
        <item>hu-HU</item>
        <item>id-ID</item>
        <item>it-IT</item>
        <item>ja-JP</item>
        <item>ko-KR</item>
        <item>ms-MY</item>
        <item>nb-NO</item>
        <item>pl-PL</item>
        <item>pt-BR</item>
        <item>pt-PT</item>
        <item>ro-RO</item>
        <item>ru-RU</item>
        <item>sk-SK</item>
        <item>sl-SI</item>
        <item>es-MX</item>
        <item>sv-SE</item>
        <item>ta-IN</item>
        <item>te-IN</item>
        <item>th-TH</item>
        <item>tr-TR</item>
        <item>vi-VN</item>
    </string-array>
</resources>