<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_create_chatroom"
            android:title="@string/prompt_create_chatroom" />
        <item
            android:id="@+id/nav_chatrooms"
            android:title="@string/view_chatroom" />
        <item
            android:id="@+id/nav_users"
            android:title="@string/view_users" />
        <item
            android:id="@+id/nav_ride_history"
            android:title="@string/view_ride_history" />
        <item
            android:id="@+id/nav_game_lobby"
            android:title="@string/nav_game_lobby" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings_title_text" />
        <item
            android:id="@+id/nav_image_translation"
            android:title="@string/image_translation_title_text" />
    </group>
</menu>