<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.chatroom.ui.ui.gallery.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_users"
        android:name="com.example.chatroom.ui.ui.home.UsersFragment"
        android:label="@string/view_users"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/nav_chatrooms"
        android:name="com.example.chatroom.ui.ui.slideshow.ChatroomFragment"
        android:label="@string/view_chatroom"
        tools:layout="@layout/fragment_chatrooms" />
    <fragment
        android:id="@+id/updateProfile"
        android:name="com.example.chatroom.ui.UpdateProfile"
        android:label="UpdateProfile" />
</navigation>