<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@drawable/users_page"
    android:layout_height="match_parent"
    tools:context=".ui.ui.SettingsFragment">


    <Switch
        android:id="@+id/settings_autoTranslateSwitch"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/auto_translate_switch_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/rectangle_border"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/settings_locationPermissionsSwitch"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/location_permission_switch_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rectangle_border"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_autoTranslateSwitch" />

    <Switch
        android:id="@+id/settings_micPermissionSwitch"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mic_permission_switch_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/rectangle_border"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_locationPermissionsSwitch" />

    <Switch
        android:id="@+id/settings_cameraPermissionSwitch"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/camera_permission_switch_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/rectangle_border"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_micPermissionSwitch" />

    <Button
        android:id="@+id/settings_saveSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_edittext"
        android:padding="10dip"
        android:text="@string/save_settings_button_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_cameraPermissionSwitch">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/language_for_auto_translation_label_text"
            android:textColor="@color/places_autocomplete_search_text"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/settings_autoTranslateDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>